--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
-(ini hapus aja , Jangan lupa subscribe lemes aku cuk)
+(
 
 
 {
-	"ip":"vanevo.aternos.me",
-	"port": "25565",
-	"name": "boboserver",
+	"ip":"mausahi.aternos.me",
+	"port": "35961",
+	"name": "mausahi",
 	"auto-night-skip":"false"
 }
